fix z-index

--- a/skins/default/css/styles.css
+++ b/skins/default/css/styles.css
@@ -212,7 +212,7 @@
     border-radius: 8px;
     padding: 4px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    z-index: 1001;
+    z-index: 3;
     text-align: center;
 }
 
